force-app/main/default/objects/Orderc__c/Orderc__c.object-meta.xml
<CustomObject>
    <label>Orderc</label>
    <nameField>
        <label>Orderc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordercs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>