force-app/main/default/objects/Orderc__c/fields/consumer_name__c.field-meta.xml
<CustomField>
    <fullName>consumer_name__c</fullName>
    <label>consumer name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>