force-app/main/default/objects/Orderc__c/fields/email_to_notify__c.field-meta.xml
<CustomField>
    <fullName>email_to_notify__c</fullName>
    <formula>consumer_name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email to notify</label>
    <type>Text</type>
</CustomField>