force-app/main/default/objects/Orderc__c/fields/ordered_units__c.field-meta.xml
<CustomField>
    <fullName>ordered_units__c</fullName>
    <label>ordered units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>