force-app/main/default/objects/Orderc__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <formula>TEXT(product_ID__r.brand_name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Brand</label>
    <type>Text</type>
</CustomField>