force-app/main/default/objects/Orderc__c/fields/product_ID__c.field-meta.xml
<CustomField>
    <fullName>product_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>product ID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>the odered unit are not ready for sale</errorMessage>
        <filterItems>
            <field>Product2.status__c</field>
            <operation>equals</operation>
            <value>Ready for sale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ordercs</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>