force-app/main/default/objects/Orderc__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <formula>TEXT( product_ID__r.model__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>