force-app/main/default/objects/Orderc__c/fields/subscribed_for_notification__c.field-meta.xml
<CustomField>
    <fullName>subscribed_for_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>subscribed for notification</label>
    <type>Checkbox</type>
</CustomField>